# anchor-pda-account-creation-issue

./: Anchor.toml  README.md  package.json
programs/anchor-pda-account-creation-issue/: Cargo.toml
programs/anchor-pda-account-creation-issue/src/: lib.rs
programs/number-as-seed-for-pda-stub-only/: Cargo.toml
programs/number-as-seed-for-pda-stub-only/src/: lib.rs
tests/: anchor-pda-account-creation-issue.ts  number-as-seed-for-pda-stub-only.ts
